# bi-pa2-semestral

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  DOCUMENTATION.md  Doxyfile  Makefile  Makefile.withAllCommands  prohlaseni.txt  zadani.txt
assets/new_games/: new_game_save
cmake/: FindSDL2TTF.cmake
examples/: map  save  save_manual  save_manual_map
src/: Application.cpp  Application.h  Constants.h  Dialog.cpp  Dialog.h  EndScreen.cpp  EndScreen.h  EntityManager.cpp  EntityManager.h  EntityType.h  FPSController.cpp  FPSController.h  FightScreen.cpp  FightScreen.h  Game.cpp  Game.h  GameCreationScreen.cpp  GameCreationScreen.h  GameState.h  MainMenu.cpp  MainMenu.h  Map.cpp  Map.h  MapFileParser.cpp  MapFileParser.h  MapParserState.cpp  MapSection.cpp  MapSection.fwd.h  MapSection.h  Menu.cpp  Menu.h  MenuHelp.cpp  MenuHelp.h  MenuItem.cpp  MenuItem.h  MenuLoad.cpp  MenuLoad.h  MenuMainMenu.cpp  MenuMainMenu.h  MenuNew.cpp  (+40 more)
src/enitity/: Entity.cpp  Entity.h  Player.cpp  Player.h
src/entity/: AnimatedEntity.cpp  AnimatedEntity.h  Apple.cpp  Apple.h  Axe.cpp  Axe.h  BlockEntity.cpp  BlockEntity.h  Boss.cpp  Boss.h  Bricks.cpp  Bricks.h  Dirt.cpp  Dirt.h  Entity.cpp  Entity.fwd.h  Entity.h  EntityType.h  GoldenApple.cpp  GoldenApple.h  Grass.cpp  Grass.h  Hearth.cpp  Hearth.h  Inventory.cpp  Inventory.h  Monster.cpp  Monster.fwd.h  Monster.h  MovingEntity.cpp  MovingEntity.h  PickupEntity.cpp  PickupEntity.fwd.h  PickupEntity.h  Player.cpp  Player.h  Stats.cpp  Stats.h  Sword.cpp  Sword.h  (+7 more)
src/games/: new_game_map  new_game_save
src/menu/: MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  MenuHelp.cpp  MenuHelp.h  MenuItem.cpp  MenuItem.h  MenuLoad.cpp  MenuLoad.h  MenuMainMenu.cpp  MenuMainMenu.h  MenuNew.cpp  MenuNew.h  MenuQuit.cpp  MenuQuit.h  MenuResume.cpp  MenuSave.cpp  MenuSave.h  ResumeMenu.cpp  ResumeMenu.h
src/new_games/: new_game_save
src/parser/: MapFileParser.cpp  MapFileParser.h  MapParserState.cpp  MapParserState.h  ParserState.h  SaveFileParser.cpp  SaveFileParser.h  SaveParserState.cpp  SaveParserState.h
src/render/: FPSController.cpp  FPSController.h  Rect.h  Renderer.cpp  Renderer.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Vec.cpp  Vec.h
src/resources/strings/: L10n.h  Paths.h
src/test/: tests.cpp
src/test/maps/: bad_map  bad_map2  bad_map3  bad_map4  bad_map5  bad_map7  bad_map8  bad_map9
src/test/saves/: bad_save  bad_save3  bad_save4  bad_save5  good_map
src/utils/: Constants.h  Result.h  StringUtils.cpp  StringUtils.h
