cmake_minimum_required(VERSION 3.22)
project(TPOHB)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/")
find_package(SDL2 REQUIRED)
find_package(SDL2TTF REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})

add_executable(
  ${PROJECT_NAME}
  src/entity/Hearth.cpp
  src/FightScreen.cpp
        src/menu/MenuHelp.cpp
        src/menu/ResumeMenu.cpp
  src/Application.cpp
  src/entity/Inventory.cpp
        src/render/FPSController.cpp
        src/menu/MenuItem.cpp
        src/parser/SaveFileParser.cpp
  src/Dialog.cpp
  src/EntityManager.cpp
  src/Game.cpp
        src/menu/MenuLoad.cpp
  src/SaveManager.cpp
  src/EndScreen.cpp
  src/entity/Monster.cpp
  src/GameCreationScreen.cpp
        src/menu/MenuMainMenu.cpp
        src/parser/SaveParserState.cpp
  src/entity/AnimatedEntity.cpp
  src/entity/MovingEntity.cpp
        src/menu/MenuNew.cpp
  src/Screen.cpp
  src/entity/Apple.cpp
  src/entity/PickupEntity.cpp
  src/main.cpp
        src/menu/MenuQuit.cpp
        src/utils/StringUtils.cpp
  src/entity/Axe.cpp
  src/entity/Player.cpp
        src/menu/MainMenu.cpp
        src/menu/MenuResume.cpp
        src/render/Text.cpp
  src/entity/BlockEntity.cpp
  src/entity/Stats.cpp
  src/Map.cpp
        src/menu/MenuSave.cpp
        src/render/Texture.cpp
  src/entity/Bricks.cpp
  src/entity/Sword.cpp
        src/parser/MapFileParser.cpp
  src/MessageDialog.cpp
        src/render/Vec.cpp
  src/entity/Dirt.cpp
  src/entity/Tree.cpp
        src/parser/MapParserState.cpp
        src/render/Rect.cpp
  src/Window.cpp
  src/entity/Entity.cpp
  src/entity/Weapon.cpp
  src/MapSection.cpp
        src/render/Renderer.cpp
  src/entity/Grass.cpp
  src/entity/Zombie.cpp
        src/menu/Menu.cpp
        src/utils/Result.cpp
  src/Application.h
  src/entity/Entity.fwd.h
  src/entity/PickupEntity.h
        src/render/FPSController.h
        src/menu/Menu.h
        src/parser/ParserState.h
  src/Screen.h
        src/utils/Constants.h
  src/entity/Entity.h
  src/entity/Player.h
  src/GameCreationScreen.h
        src/menu/MenuHelp.h
        src/render/Rect.h
        src/utils/StringUtils.h
  src/Dialog.h
  src/entity/Grass.h
  src/entity/Stats.h
  src/Game.h
        src/menu/MenuItem.h
        src/render/Renderer.h
        src/render/Text.h
  src/EndScreen.h
  src/entity/Hearth.h
  src/entity/Sword.h
  src/GameState.h
        src/menu/MenuLoad.h
  src/resources/strings/L10n.h
        src/render/Texture.h
  src/entity/AnimatedEntity.h
  src/entity/Inventory.h
  src/entity/Tree.h
        src/menu/MainMenu.h
        src/menu/MenuMainMenu.h
  src/resources/strings/Paths.h
        src/render/Vec.h
  src/entity/Apple.h
  src/EntityManager.h
  src/EntityType.h
        src/parser/MapFileParser.h
        src/menu/MenuNew.h
        src/utils/Result.h
  src/Window.h
  src/entity/Axe.h
  src/entity/Monster.fwd.h
  src/entity/Weapon.fwd.h
  src/Map.h
        src/menu/MenuQuit.h
        src/menu/ResumeMenu.h
  src/entity/BlockEntity.h
  src/entity/Monster.h
  src/entity/Weapon.h
        src/parser/MapParserState.h
        src/menu/MenuResume.h
        src/parser/SaveFileParser.h
  src/entity/Bricks.h
  src/entity/MovingEntity.h
  src/entity/Zombie.h
  src/MapSection.fwd.h
        src/menu/MenuSave.h
  src/SaveManager.h
  src/entity/Dirt.h
  src/entity/PickupEntity.fwd.h
  src/FightScreen.h
  src/MapSection.h
  src/MessageDialog.h
        src/parser/SaveParserState.h)
target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES})
